# zenonia3-psvita-port

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  manage_vita.py  plan_zenonia3_port.md  port_progress.md  zenonia3_port_progress.md
loader/: androidui.c  androidui.h  audio.c  audio.h  dynlib.c  font.c  font.h  htmltext.c  htmltext.h  htmlview.c  htmlview.h  java.c  ksc5601_table.h  main.c  so_util.c
porting_tools/: README.md  ai_bash_commands.sh  manage_vita.py  parse_dump.py  translate_shaders.py
porting_tools/automation/: click_helper.py  hold_click.py  key_helper.py  mousedown_only.py  mouseup_only.py
porting_tools/misc/: translate_docs.py
porting_tools/tests/: run_tests.sh
psvita-port-toolkit/: PORTING_GUIDE.md  README.md
psvita-port-toolkit/skills/psvita-porting/: SKILL.md
psvita-port-toolkit/skills/psvita-porting/references/: asset_packaging.md  clean_code.md  debugging.md  hardware_debugging.md  input_handling.md  jni_bindings.md  jni_stubs.md  lint_testing.md  livearea_assets.md  optimization.md  so_loading.md  text_rendering.md  toolchain_gotchas.md  vitasdk_setup.md  vpk_packaging.md
psvita-port-toolkit/skills/so-crash-triage/: SKILL.md
tools/: build_android_ui_assets.py
